--- a/blackjack/index.html
+++ b/blackjack/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blackjack</title>
-    <link rel="stylesheet" href="blackjack.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Blackjack</h1>
@@ -19,6 +19,6 @@
     </div>
     <p id="player-el"></p>
     <p id="bet-el"></p>
-    <script src="blackjack.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
